lombok 설정은 기본값으로 쓰자!
업무에서 LOGGER로 쓰던 습관이 있어서 LOGGER로 했었는데...
lombok의 기본 설정으로 쓰는게 나을 것 같다.

- 그외 SonarQube 권고사항 수정.